--- a/angular.json
+++ b/angular.json
@@ -3,5 +3,56 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
+    "truenas-ui": {
+      "projectType": "library",
+      "root": "projects/truenas-ui",
+      "sourceRoot": "projects/truenas-ui/src",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/truenas-ui/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/truenas-ui/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/truenas-ui/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/truenas-ui/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        },
+        "storybook": {
+          "builder": "@storybook/angular:start-storybook",
+          "options": {
+            "configDir": "projects/truenas-ui/.storybook",
+            "browserTarget": "truenas-ui:build",
+            "compodoc": false,
+            "port": 6006
+          }
+        },
+        "build-storybook": {
+          "builder": "@storybook/angular:build-storybook",
+          "options": {
+            "configDir": "projects/truenas-ui/.storybook",
+            "browserTarget": "truenas-ui:build",
+            "compodoc": false,
+            "outputDir": "storybook-static"
+          }
+        }
+      }
+    }
   }
 }
