--- a/package.json
+++ b/package.json
@@ -6,32 +6,50 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "storybook": "ng run truenas-ui:storybook",
+    "build-storybook": "ng run truenas-ui:build-storybook",
+    "sb": "yarn run storybook --host localhost"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.2.0",
-    "@angular/common": "^14.2.0",
-    "@angular/compiler": "^14.2.0",
-    "@angular/core": "^14.2.0",
-    "@angular/forms": "^14.2.0",
-    "@angular/platform-browser": "^14.2.0",
-    "@angular/platform-browser-dynamic": "^14.2.0",
-    "@angular/router": "^14.2.0",
+    "@angular/animations": "^19.0.0",
+    "@angular/common": "^19.0.0",
+    "@angular/compiler": "^19.0.0",
+    "@angular/core": "^19.0.0",
+    "@angular/forms": "^19.0.0",
+    "@angular/platform-browser": "^19.0.0",
+    "@angular/platform-browser-dynamic": "^19.0.0",
+    "@angular/router": "^19.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.15.0"
   },
   "devDependencies": {
-    "@angular/cli": "~14.2.6",
-    "@angular/compiler-cli": "^14.2.0",
+    "@angular-devkit/build-angular": "^19.0.0",
+    "@angular/cli": "^19.0.0",
+    "@angular/compiler-cli": "^19.0.0",
+    "@storybook/addon-a11y": "^7.5.0",
+    "@storybook/addon-essentials": "^8.5.8",
+    "@storybook/addon-interactions": "^8.5.8",
+    "@storybook/addon-links": "^8.5.8",
+    "@storybook/addon-onboarding": "^8.5.8",
+    "@storybook/addon-themes": "^8.6.4",
+    "@storybook/addons": "^7.6.17",
+    "@storybook/angular": "^8.5.8",
+    "@storybook/blocks": "^8.5.8",
+    "@storybook/test": "^8.5.8",
     "@types/jasmine": "~4.0.0",
+    "css-loader": "^7.1.2",
     "jasmine-core": "~4.3.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "typescript": "~4.7.2"
+    "ng-packagr": "^19.0.0",
+    "storybook": "^8.5.8",
+    "style-loader": "^4.0.0",
+    "typescript": "^5.7.3"
   }
 }
