--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
+    "test": "jest --config ./projects/truenas-ui/jest.config.ts",
+    "test-cc": "yarn jest --clearCache && yarn jest --config ./projects/truenas-ui/jest.config.ts",
+    "test-coverage": "yarn jest --clearCache && yarn jest --config ./projects/truenas-ui/jest.config.ts --coverage",
+    "test-sb": "test-storybook",
     "storybook": "ng run truenas-ui:storybook",
     "build-storybook": "ng run truenas-ui:build-storybook",
-    "sb": "yarn run storybook --host localhost"
+    "sb": "yarn run storybook --host localhost",
+    "reinstall": "rm -rf ./node_modules && yarn install"
   },
   "private": true,
   "dependencies": {
@@ -22,13 +26,13 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "^0.15.0"
+    "tslib": "^2.3.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.0",
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
+    "@nrwl/jest": "^19.8.4",
     "@storybook/addon-a11y": "^7.5.0",
     "@storybook/addon-essentials": "^8.5.8",
     "@storybook/addon-interactions": "^8.5.8",
@@ -39,9 +43,15 @@
     "@storybook/angular": "^8.5.8",
     "@storybook/blocks": "^8.5.8",
     "@storybook/test": "^8.5.8",
+    "@storybook/test-runner": "^0.22.0",
+    "@storybook/testing-library": "^0.2.2",
     "@types/jasmine": "~4.0.0",
+    "@types/jest": "^29.5.14",
     "css-loader": "^7.1.2",
     "jasmine-core": "~4.3.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-preset-angular": "14.2.4",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.2.0",
@@ -50,6 +60,8 @@
     "ng-packagr": "^19.0.0",
     "storybook": "^8.5.8",
     "style-loader": "^4.0.0",
-    "typescript": "^5.7.3"
+    "ts-jest": "^29.3.0",
+    "typescript": "^5.7.3",
+    "zone.js": "^0.14.2"
   }
 }
