--- a/projects/truenas-ui/package.json
+++ b/projects/truenas-ui/package.json
@@ -6,7 +6,12 @@
     "@angular/core": "^19.1.0"
   },
   "dependencies": {
+    "@angular/cdk": "^19.2.7",
     "tslib": "^2.3.0"
   },
-  "sideEffects": false
+  "sideEffects": false,
+  "devDependencies": {
+    "@storybook/jest": "^0.2.3",
+    "@testing-library/jest-dom": "^6.6.3"
+  }
 }
