--- a/projects/truenas-ui/package.json
+++ b/projects/truenas-ui/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^19.1.0",
-    "@angular/core": "^19.1.0"
+    "@angular/core": "^19.1.0",
+    "@angular/cdk": "^19.2.7"
   },
   "dependencies": {
-    "@angular/cdk": "^19.2.7",
     "tslib": "^2.3.0"
   },
   "sideEffects": false,
