--- a/projects/truenas-ui/package.json
+++ b/projects/truenas-ui/package.json
@@ -2,9 +2,9 @@
   "name": "truenas-ui",
   "version": "0.0.1",
   "peerDependencies": {
+    "@angular/cdk": "^19.2.7",
     "@angular/common": "^19.1.0",
-    "@angular/core": "^19.1.0",
-    "@angular/cdk": "^19.2.7"
+    "@angular/core": "^19.1.0"
   },
   "dependencies": {
     "tslib": "^2.3.0"
@@ -12,6 +12,7 @@
   "sideEffects": false,
   "devDependencies": {
     "@storybook/jest": "^0.2.3",
-    "@testing-library/jest-dom": "^6.6.3"
+    "@testing-library/jest-dom": "^6.6.3",
+    "lucide": "^0.526.0"
   }
 }
