--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "storybook": "yarn copy-themes && ng run truenas-ui:storybook",
     "build-storybook": "yarn copy-themes && ng run truenas-ui:build-storybook",
     "sb": "yarn copy-themes && yarn run storybook --host 0.0.0.0",
+    "sbh": "yarn copy-themes && yarn run storybook --host 0.0.0.0 --no-open",
     "reinstall": "rm -rf ./node_modules && yarn install"
   },
   "private": true,
@@ -28,7 +29,6 @@
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
     "rxjs": "~7.5.0",
-    "truenas-ui": "file:../truenas-ui/dist/truenas-ui",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
