--- a/package.json
+++ b/package.json
@@ -28,11 +28,15 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@mdi/angular-material": "^7.2.96",
+    "@mdi/js": "^7.4.47",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
+    "@angular-devkit/architect": "^0.1902.0",
     "@angular-devkit/build-angular": "^19.0.0",
+    "@angular-devkit/core": "^19.2.0",
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
     "@nrwl/jest": "^19.8.4",
@@ -45,6 +49,7 @@
     "@storybook/addons": "^7.6.17",
     "@storybook/angular": "^8.5.8",
     "@storybook/blocks": "^8.5.8",
+    "@storybook/jest": "^0.2.3",
     "@storybook/test": "^8.5.8",
     "@storybook/test-runner": "^0.22.0",
     "@storybook/testing-library": "^0.2.2",
@@ -60,11 +65,13 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "lucide": "^0.545.0",
     "ng-packagr": "^19.0.0",
     "storybook": "^8.5.8",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.3.0",
-    "typescript": "^5.7.3",
+    "typescript": "~5.6.0",
     "zone.js": "^0.14.2"
-  }
+  },
+  "packageManager": "yarn@4.10.3"
 }
