--- a/projects/truenas-ui/package.json
+++ b/projects/truenas-ui/package.json
@@ -4,7 +4,9 @@
   "peerDependencies": {
     "@angular/cdk": "^19.2.7",
     "@angular/common": "^19.1.0",
-    "@angular/core": "^19.1.0"
+    "@angular/core": "^19.1.0",
+    "@mdi/angular-material": "^7.2.96",
+    "@mdi/js": "^7.4.47"
   },
   "dependencies": {
     "tslib": "^2.3.0"
