--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "name": "truenas-ui",
   "version": "0.0.0",
+  "main": "./dist/truenas-ui/fesm2022/truenas-ui.mjs",
+  "module": "./dist/truenas-ui/fesm2022/truenas-ui.mjs",
+  "typings": "./dist/truenas-ui/index.d.ts",
+  "exports": {
+    "./package.json": {
+      "default": "./package.json"
+    },
+    ".": {
+      "types": "./dist/truenas-ui/index.d.ts",
+      "default": "./dist/truenas-ui/fesm2022/truenas-ui.mjs"
+    }
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
