--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # Compiled output
-/dist
 /tmp
 /out-tsc
 /bazel-out
@@ -11,6 +10,7 @@
 projects/truenas-ui/node_modules
 npm-debug.log
 yarn-error.log
+.yarn/*
 
 # IDEs and editors
 .idea/
