--- a/package.json
+++ b/package.json
@@ -1,6 +1,18 @@
 {
   "name": "truenas-ui",
   "version": "0.0.0",
+  "main": "./dist/truenas-ui/fesm2022/truenas-ui.mjs",
+  "module": "./dist/truenas-ui/fesm2022/truenas-ui.mjs",
+  "typings": "./dist/truenas-ui/index.d.ts",
+  "exports": {
+    "./package.json": {
+      "default": "./package.json"
+    },
+    ".": {
+      "types": "./dist/truenas-ui/index.d.ts",
+      "default": "./dist/truenas-ui/fesm2022/truenas-ui.mjs"
+    }
+  },
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -15,26 +27,42 @@
     "build-storybook": "yarn copy-themes && ng run truenas-ui:build-storybook",
     "sb": "yarn copy-themes && yarn run storybook --host 0.0.0.0",
     "sbh": "yarn copy-themes && yarn run storybook --host 0.0.0.0 --no-open",
-    "reinstall": "rm -rf ./node_modules && yarn install"
+    "reinstall": "rm -rf ./node_modules && yarn install",
+    "prepare": "husky"
   },
   "private": true,
+  "peerDependencies": {
+    "@angular/animations": "^20.0.0",
+    "@angular/cdk": "^20.0.0",
+    "@angular/common": "^20.0.0",
+    "@angular/core": "^20.0.0",
+    "@angular/forms": "^20.0.0",
+    "@angular/platform-browser": "^20.0.0",
+    "@angular/platform-browser-dynamic": "^20.0.0",
+    "@angular/router": "^20.0.0",
+    "rxjs": "^7.5.0",
+    "zone.js": "^0.15.0"
+  },
   "dependencies": {
-    "@angular/animations": "^19.0.0",
-    "@angular/cdk": "^19.0.0",
-    "@angular/common": "^19.0.0",
-    "@angular/compiler": "^19.0.0",
-    "@angular/core": "^19.0.0",
-    "@angular/forms": "^19.0.0",
-    "@angular/platform-browser": "^19.0.0",
-    "@angular/platform-browser-dynamic": "^19.0.0",
-    "@angular/router": "^19.0.0",
-    "rxjs": "~7.5.0",
+    "@mdi/angular-material": "^7.2.96",
+    "@mdi/js": "^7.4.47",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.0.0",
-    "@angular/cli": "^19.0.0",
-    "@angular/compiler-cli": "^19.0.0",
+    "@angular-devkit/architect": "^0.1902.0",
+    "@angular-devkit/build-angular": "^20.0.0",
+    "@angular-devkit/core": "^19.2.0",
+    "@angular/animations": "^20.3.4",
+    "@angular/cdk": "^20.2.8",
+    "@angular/cli": "^20.0.0",
+    "@angular/common": "^20.3.4",
+    "@angular/compiler": "^20.3.4",
+    "@angular/compiler-cli": "^20.0.0",
+    "@angular/core": "^20.3.4",
+    "@angular/forms": "^20.3.4",
+    "@angular/platform-browser": "^20.3.4",
+    "@angular/platform-browser-dynamic": "^20.3.4",
+    "@angular/router": "^20.3.4",
     "@nrwl/jest": "^19.8.4",
     "@storybook/addon-a11y": "^7.5.0",
     "@storybook/addon-essentials": "^8.5.8",
@@ -45,12 +73,14 @@
     "@storybook/addons": "^7.6.17",
     "@storybook/angular": "^8.5.8",
     "@storybook/blocks": "^8.5.8",
+    "@storybook/jest": "^0.2.3",
     "@storybook/test": "^8.5.8",
     "@storybook/test-runner": "^0.22.0",
     "@storybook/testing-library": "^0.2.2",
     "@types/jasmine": "~4.0.0",
     "@types/jest": "^29.5.14",
     "css-loader": "^7.1.2",
+    "husky": "^9.1.7",
     "jasmine-core": "~4.3.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
@@ -60,12 +90,14 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
-    "lucide": "^0.539.0",
-    "ng-packagr": "^19.0.0",
+    "lucide": "^0.545.0",
+    "ng-packagr": "^20.0.0",
+    "rxjs": "^7.8.2",
     "storybook": "^8.5.8",
     "style-loader": "^4.0.0",
     "ts-jest": "^29.3.0",
-    "typescript": "~5.6.0",
-    "zone.js": "^0.14.2"
-  }
+    "typescript": "~5.8.0",
+    "zone.js": "^0.15.1"
+  },
+  "packageManager": "yarn@4.10.3"
 }
