--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "storybook": "yarn copy-themes && ng run truenas-ui:storybook",
     "build-storybook": "yarn copy-themes && ng run truenas-ui:build-storybook",
     "sb": "yarn copy-themes && yarn run storybook --host 0.0.0.0",
-    "sbh": "yarn copy-themes && yarn run storybook --host 0.0.0.0 --no-open",
+    "sbh": "NODE_OPTIONS='--max-old-space-size=4096' yarn copy-themes && yarn run storybook --host 0.0.0.0 --no-open --loglevel warn",
     "reinstall": "rm -rf ./node_modules && yarn install",
     "prepare": "husky"
   },
