Fix storybook build

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ng": "ng",
     "start": "ng serve",
     "generate-icons": "node scripts/generate-icon-constants.js",
+    "generate-sprite": "npx tsx projects/truenas-ui/scripts/icon-sprite/make-sprite.ts",
     "prebuild": "npm run generate-icons",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
@@ -30,8 +31,8 @@
     "copy-themes": "cp ./projects/truenas-ui/src/styles/themes.css ./projects/truenas-ui/.storybook/public/",
     "copy-sprite": "cp ./projects/truenas-ui/assets/icons/sprite.svg ./projects/truenas-ui/.storybook/public/assets/icons/ && cp ./projects/truenas-ui/assets/icons/sprite-config.json ./projects/truenas-ui/.storybook/public/assets/icons/",
     "copy-assets": "yarn copy-themes && yarn copy-sprite",
-    "storybook": "yarn copy-assets && ng run truenas-ui:storybook",
-    "build-storybook": "yarn copy-assets && ng run truenas-ui:build-storybook",
+    "storybook": "yarn generate-sprite && yarn copy-assets && ng run truenas-ui:storybook",
+    "build-storybook": "yarn generate-sprite && yarn copy-assets && ng run truenas-ui:build-storybook",
     "sb": "yarn copy-assets && yarn run storybook --host 0.0.0.0",
     "sbh": "NODE_OPTIONS='--max-old-space-size=4096' yarn copy-assets && yarn run storybook --host 0.0.0.0 --no-open --loglevel warn",
     "reinstall": "rm -rf ./node_modules && yarn install",
