--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "test-cc": "yarn jest --clearCache && yarn jest --config ./projects/truenas-ui/jest.config.ts",
     "test-coverage": "yarn jest --clearCache && yarn jest --config ./projects/truenas-ui/jest.config.ts --coverage",
     "test-sb": "test-storybook",
+    "lint": "eslint \"projects/truenas-ui/src/**/*.{ts,html}\" \"scripts/**/*.ts\"",
+    "lint:fix": "eslint \"projects/truenas-ui/src/**/*.{ts,html}\" \"scripts/**/*.ts\" --fix",
     "copy-themes": "cp ./projects/truenas-ui/src/styles/themes.css ./projects/truenas-ui/.storybook/public/",
     "copy-sprite": "cp ./projects/truenas-ui/assets/icons/sprite.svg ./projects/truenas-ui/.storybook/public/assets/icons/ && cp ./projects/truenas-ui/assets/icons/sprite-config.json ./projects/truenas-ui/.storybook/public/assets/icons/",
     "copy-assets": "yarn copy-themes && yarn copy-sprite",
@@ -70,6 +72,10 @@
     "@angular-devkit/architect": "^0.1902.0",
     "@angular-devkit/build-angular": "^20.0.0",
     "@angular-devkit/core": "^19.2.0",
+    "@angular-eslint/builder": "^21.1.0",
+    "@angular-eslint/eslint-plugin": "^21.1.0",
+    "@angular-eslint/eslint-plugin-template": "^21.1.0",
+    "@angular-eslint/template-parser": "^21.1.0",
     "@angular/animations": "^20.3.4",
     "@angular/cdk": "^20.2.8",
     "@angular/cli": "^20.0.0",
@@ -97,7 +103,14 @@
     "@storybook/testing-library": "^0.2.2",
     "@types/jasmine": "~4.0.0",
     "@types/jest": "^29.5.14",
+    "@typescript-eslint/eslint-plugin": "^8.51.0",
+    "@typescript-eslint/parser": "^8.51.0",
+    "@typescript-eslint/types": "^8.51.0",
+    "@typescript-eslint/utils": "^8.51.0",
     "css-loader": "^7.1.2",
+    "eslint": "^9.39.2",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-unused-imports": "^4.3.0",
     "husky": "^9.1.7",
     "jasmine-core": "~4.3.0",
     "jest": "^29.7.0",
