--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,9 +19,28 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
+  check-skip:
+    name: Check if workflow should skip
+    runs-on: ubuntu-latest
+    outputs:
+      should_skip: ${{ steps.check.outputs.should_skip }}
+    steps:
+      - name: Check commit message
+        id: check
+        run: |
+          if [[ "${{ github.event.head_commit.message }}" == *"[skip-dist-build]"* ]]; then
+            echo "should_skip=true" >> $GITHUB_OUTPUT
+            echo "⏭️  Skipping CI for dist-only commit"
+          else
+            echo "should_skip=false" >> $GITHUB_OUTPUT
+            echo "✅ Running full CI pipeline"
+          fi
+
   lint:
     name: Run Linter
     runs-on: ubuntu-latest
+    needs: check-skip
+    if: needs.check-skip.outputs.should_skip != 'true'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -44,6 +63,8 @@ jobs:
   test:
     name: Run Tests
     runs-on: ubuntu-latest
+    needs: check-skip
+    if: needs.check-skip.outputs.should_skip != 'true'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -66,6 +87,8 @@ jobs:
   build:
     name: Build Library
     runs-on: ubuntu-latest
+    needs: check-skip
+    if: needs.check-skip.outputs.should_skip != 'true'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -88,8 +111,11 @@ jobs:
   build-storybook:
     name: Build Storybook
     runs-on: ubuntu-latest
-    needs: [lint, test, build]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    needs: [lint, test, build, check-skip]
+    if: |
+      needs.check-skip.outputs.should_skip != 'true' &&
+      github.ref == 'refs/heads/main' &&
+      github.event_name == 'push'
     steps:
       - name: Checkout
         uses: actions/checkout@v4
