NAS-000000: fix Storybook styles leaking into published library and remove unused CSS
- Split Storybook-specific styles into themes-storybook.css
- Remove Storybook selectors (.sbdocs-*, .docblock-*) from production themes.css
- Update ng-package.json to explicitly list published CSS files
- Update Storybook preview-head.html to load themes-storybook.css
- Update copy-themes script to include themes-storybook.css
- Delete unused dialog.css (legacy code with outdated naming conventions)
- All dialog component styles remain in themes.css with correct BEM naming

This prevents Storybook development styles from affecting production consumers
and ensures only necessary stylesheets are published to npm.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "test-sb": "test-storybook",
     "lint": "eslint \"projects/truenas-ui/src/**/*.{ts,html}\" \"scripts/**/*.ts\"",
     "lint:fix": "eslint \"projects/truenas-ui/src/**/*.{ts,html}\" \"scripts/**/*.ts\" --fix",
-    "copy-themes": "cp ./projects/truenas-ui/src/styles/themes.css ./projects/truenas-ui/.storybook/public/",
+    "copy-themes": "cp ./projects/truenas-ui/src/styles/themes.css ./projects/truenas-ui/.storybook/public/ && cp ./projects/truenas-ui/src/styles/themes-storybook.css ./projects/truenas-ui/.storybook/public/",
     "copy-sprite": "cp ./projects/truenas-ui/assets/tn-icons/sprite.svg ./projects/truenas-ui/.storybook/public/assets/tn-icons/ && cp ./projects/truenas-ui/assets/tn-icons/sprite-config.json ./projects/truenas-ui/.storybook/public/assets/tn-icons/",
     "copy-assets": "yarn copy-themes && yarn copy-sprite",
     "storybook": "yarn generate-sprite && yarn copy-assets && yarn generate-harness-docs && ng run truenas-ui:storybook",
