add webshare icon

--- a/projects/truenas-ui/assets/tn-icons/sprite-config.json
+++ b/projects/truenas-ui/assets/tn-icons/sprite-config.json
@@ -73,6 +73,7 @@
     "tn-truenas-logo-mark-color",
     "tn-truenas-logo-type",
     "tn-truenas-logo-type-color",
-    "tn-two-factor-auth"
+    "tn-two-factor-auth",
+    "tn-webshare"
   ]
 }
